fix the scrollbar bottom by remove the width of the separator fixes #36

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,6 @@ main {
 
 /* VIDEO CARDS (section 3) */
 .separator {
-    width: 100%;
     border: 1px solid rgba(58, 47, 47, 0.7);
     box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
     margin-bottom: 70px;
